[package]
name = "graphsheets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
native-dialog = "0.6.4"
notan = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[profile.release]
debug = true

[[bin]]
name = "graphsheets"
path = "src/macroquad_renderer.rs"
