[package]
name = "graphsheets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version= "0.35.2", features=[ "bundled", "ttf"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[profile.release]
debug = false
lto = "fat"

[[bin]]
name = "graphsheets"
path = "src/sdl2_renderer.rs"
