[package]
name = "graphsheets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"

[dependencies.web-sys]
version = "0.3.4"
features = ['css','CssStyleDeclaration']

[profile.release]
debug = false
lto = "fat"

[[bin]]
name = "graphsheets"
path = "src/yew_renderer.rs"
