[package]
name = "graphsheets-yew"
version = "0.0.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
graph-elements = { path = "../graph-elements" }
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"
web-sys = { version = "0.3.4", features = ["css", "CssStyleDeclaration"] }

[profile.release]
lto = "fat"
